--- a/App/assets/config.json
+++ b/App/assets/config.json
@@ -1,4 +1,4 @@
 {
-  "python_exe_path": "",
+  "python_exe_path": "C:\\Users\\might\\Desktop\\files\\projects\\ai-model-maker\\App\\assets\\python-scripts\\env\\python.exe",
   "theme_mode": ""
 }
