--- a/App/release/app/package.json
+++ b/App/release/app/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "electron-react-boilerplate",
-  "version": "4.6.0",
-  "description": "A foundation for scalable desktop apps",
+  "name": "ai-model-maker",
+  "version": "0.1.0",
+  "description": "An app for creating ai models using ui.",
   "license": "MIT",
   "author": {
-    "name": "Electron React Boilerplate Maintainers",
-    "email": "electronreactboilerplate@gmail.com",
-    "url": "https://github.com/electron-react-boilerplate"
+    "name": "Mihail Dimitrov"
   },
   "main": "./dist/main/main.js",
   "scripts": {
