feat: :sparkles: added ability to create model structure through the app

--- a/App/assets/.gitignore
+++ b/App/assets/.gitignore
@@ -1,2 +1,6 @@
 /datasets/table/*
-/datasets/image/*
+/datasets/image/classification/*
+/datasets/image/detection/*
+/datasets/image/captioning/*
+
+/models/*
