--- a/App/package.json
+++ b/App/package.json
@@ -43,6 +43,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "chart.js": "^4.4.1",
     "csv-parse": "^5.5.3",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
@@ -51,13 +52,12 @@
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.4.2",
     "notistack": "^3.0.1",
-    "path": "^0.12.7",
     "python-shell": "^5.0.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.5.0",
     "react-router-dom": "^6.18.0",
-    "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
