--- a/App/assets/config.json
+++ b/App/assets/config.json
@@ -1,4 +1,4 @@
 {
-  "python_exe_path": "C:\\Users\\Petar.Hristov\\tf\\Scripts\\python.exe",
+  "python_exe_path": "C:\\Users\\might\\Desktop\\files\\projects\\python-model-maker\\.conda\\python.exe",
   "theme_mode": ""
 }
